# osplayground

./: CMakeLists.txt  main.cpp
docs/: OSPlayground_Project_Share.md
docs/report/: report.tex  report_main.tex
docs/report/chapters/: 0_muc_luc_va_tom_tat.tex  1_gioi_thieu.tex  2_co_so_ly_thuyet.tex  3_yeu_cau_pham_vi.tex  4_kien_truc.tex  5_chi_tiet_cpu.tex  6_chi_tiet_memory.tex  7_chi_tiet_ipc_shell.tex  8_he_thong_diem.tex  9_giao_dien.tex
engine/: loop.cpp  loop.h
scripts/: build.sh  run_demo.sh
sim/cpu/: demo_cpu.cpp  gantt.cpp  gantt.h  scheduler.cpp  scheduler.h
sim/ipc/: ipc.cpp  ipc.h
sim/mem/: memory.cpp  memory.h  replacement.cpp  replacement.h
ui/cli/: interface.cpp  interface.h
utils/: log.cpp  log.h
